<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/intro_settings_success_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/big_padding"
        android:gravity="center"
        android:text="@string/permission_success_message"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <TextView
        android:id="@+id/intro_settings_enabled_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginTop="@dimen/very_big_padding"
        android:gravity="center"
        android:text="@string/overlay_setting_enabled_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/check_green_48dp"
        android:drawablePadding="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/intro_settings_success_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <TextView
        android:id="@+id/intro_settings_enabled_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginTop="@dimen/very_big_padding"
        android:gravity="center"
        android:text="@string/accessibility_setting_enabled_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/check_green_48dp"
        android:drawablePadding="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/intro_settings_enabled_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <TextView
        android:id="@+id/intro_settings_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginTop="@dimen/very_big_padding"
        android:gravity="center"
        android:text="@string/overlay_setting_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_settings_enabled_title_2" />

    <TextView
        android:id="@+id/intro_settings_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/big_padding"
        android:gravity="center"
        android:text="@string/overlay_setting_desc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_settings_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/intro_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/big_padding"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/overlay_setting_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
