<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/deep_link_parent_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TilesWidgetFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deep_link_uri_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/deep_link_uri_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deep_link_uri_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/deep_link_launch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/deep_link_uri_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/deep_link_uri_button"/>
    <Button
        android:id="@+id/deep_link_clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/deep_link_uri_layout"
        app:layout_constraintStart_toEndOf="@+id/deep_link_launch_button"
        android:text="@string/deep_link_clear_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
